wip -- new swagger
