# api/static/swagger.yaml
@@ -1,142 +1,127 @@
-openapi: 3.0.1
+openapi: 3.0.0
 info:
-  title: Application
-  description: Generated at 22/11/2023 00:40:59. This is the swagger 
-    ui based on the open api 3.0 specification of the Application
-  version: 1.0.0 created by the flask swagger generator.
-externalDocs:
-  description: Find out more about Swagger
-  url: 'http://swagger.io'
+  title: Restaurant Reservation API
+  description: API for managing restaurant reservations.
+  version: 1.0.0
+
 servers:
-  - url: '/'
+  - url: http://localhost:5000
+    description: Local development server
+
 paths:
-  '/swagger/dist/{filename}':
+  /:
     get:
-      tags:
-      - swagger_ui
-      operationId: 'static'
-      parameters:
-      - in: path
-        name: filename
-        schema:
-          type: string
-        description: None
-        required: True
-  '/swagger/{path}':
-    get:
-      tags:
-      - swagger_ui
-      operationId: 'show'
-      parameters:
-      - in: path
-        name: path
-        schema:
-          type: string
-        description: None
-        required: True
-  '/swagger/':
-    get:
-      tags:
-      - swagger_ui
-      operationId: 'show'
-  '/':
-    get:
-      tags:
-      - None
-      operationId: 'metrics'
-  '/tables':
-    get:
-      tags:
-      - None
-      operationId: 'get_tables'
-      parameters:
-      - in: query
-        name: None
-        schema:
-          type: string
-        description: None
-        required: False
-        allowReserved: False
+      summary: Get the main HTML content
       responses:
         '200':
-          $ref: '#/components/responses/get_tables_response'
-  '/free-tables':
+          description: HTML content of the main page
+          content:
+            text/html:
+              schema:
+                type: string
+
+  /tables:
     get:
-      tags:
-      - None
-      operationId: 'get_free_tables'
+      summary: Get table data based on time
       parameters:
-      - in: query
-        name: None
-        schema:
-          type: string
-        description: None
-        required: False
-        allowReserved: False
+        - in: query
+          name: time
+          schema:
+            type: string
+          required: true
+          description: Time filter in format year-month-day--hour:minute:seconds
       responses:
         '200':
-          $ref: '#/components/responses/get_free_tables_response'
-  '/reservations':
+          description: Table data
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  type: object
+                  properties:
+                    Table:
+                      type: integer
+        '400':
+          description: Error message for missing time parameter
+
+  /reservations:
     get:
-      tags:
-      - None
-      operationId: 'handle_reservations'
+      summary: Get all reservations
       responses:
         '200':
-          $ref: '#/components/responses/handle_reservations_response'
-    post:
-      tags:
-      - None
-      operationId: 'handle_reservations'
-      responses:
-        '200':
-          $ref: '#/components/responses/handle_reservations_response'
+          description: List of all reservations
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Reservation'
     put:
-      tags:
-      - None
-      operationId: 'handle_reservations'
+      summary: Add a new reservation
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/Reservation'
+      responses:
+        '201':
+          description: New reservation added
+    patch:
+      summary: Cancel a reservation
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                reservation_number:
+                  type: integer
       responses:
         '200':
-          $ref: '#/components/responses/handle_reservations_response'
+          description: Reservation canceled
+
+  /free-tables:
+    get:
+      summary: Get free tables based on time interval
+      parameters:
+        - in: query
+          name: start_time
+          schema:
+            type: string
+          required: true
+        - in: query
+          name: end_time
+          schema:
+            type: string
+          required: true
+      responses:
+        '200':
+          description: List of free tables
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  type: integer
+        '400':
+          description: Error message for missing start or end time
+
 components:
-  responses:
-    get_tables_response:
-      description: get_tables response
-      content:
-         application/json:
-             schema:
-                 $ref: '#/components/schemas/get_tables_response_schema'
-    get_free_tables_response:
-      description: get_free_tables response
-      content:
-         application/json:
-             schema:
-                 $ref: '#/components/schemas/get_free_tables_response_schema'
-    handle_reservations_response:
-      description: handle_reservations response
-      content:
-         application/json:
-             schema:
-                 $ref: '#/components/schemas/handle_reservations_response_schema'
   schemas:
-    get_tables_response_schema:
+    Reservation:
       type: object
       properties:
-        tables:
-          type: array  
-          items:
-            type: object
-    get_free_tables_response_schema:
-      type: object
-      properties:
-        tables:
-          type: array  
-          items:
-            type: object
-    handle_reservations_response_schema:
-      type: object
-      properties:
-        reservations:
-          type: array  
-          items:
-            type: object
+        table_number:
+          type: integer
+        duration_minutes:
+          type: integer
+        pin:
+          type: integer
+        reservation_number:
+          type: integer
+        timestamp:
+          type: string
+          format: date-time
